k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teacher
  template:
    metadata:
      labels:
        app: teacher
    spec:
      containers:
        - name: teacher
          image: ghcr.io/euroska/teacher:master
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: teacher
  namespace: services
spec:
  selector:
    app: teacher
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teacher
  namespace: services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  tls:
    - hosts:
        - teacher.sourcelab.cz
      secretName: teacher.sourcelab.cz
  rules:
    - host: teacher.sourcelab.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teacher
                port:
                  number: 3000
